fixed UI issues introduced while working on smaller profile card

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -43,3 +43,9 @@ body {
   position: relative;
   margin-left: 100px;
 }
+
+.sml-profile {
+  /*position: relative;*/
+  margin: 5px 10px;
+
+}
